--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
   "require-dev": {
     "behat/behat": "^3.4",
     "monolog/monolog": "^1.23",
-    "phpspec/phpspec": "^3.4"
+    "phpspec/phpspec": "^3.4",
+    "squizlabs/php_codesniffer": "^3.1"
   },
   "require": {
     "php": ">= 5.6 < 7.0",
