--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,11 @@
   },
   "require-dev": {
     "behat/behat": "^3.4",
+    "friendsofphp/php-cs-fixer": "^2.6",
     "monolog/monolog": "^1.23",
     "phpspec/phpspec": "^3.4",
-    "squizlabs/php_codesniffer": "^3.1"
+    "squizlabs/php_codesniffer": "^3.1",
+    "escapestudios/symfony2-coding-standard": "^3.0"
   },
   "require": {
     "php": ">= 5.6 < 7.0",
