--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,21 @@
       "email": "barney@shrikeh.net"
     }
   ],
+  "require-dev": {
+    "behat/behat": "^3.4",
+    "escapestudios/symfony2-coding-standard": "^3.0",
+    "friendsofphp/php-cs-fixer": "^2.6",
+    "monolog/monolog": "^1.23",
+    "phpspec/phpspec": "^3.4",
+    "shrikeh/teapot": "^2.3",
+    "squizlabs/php_codesniffer": "^3.1"
+  },
+  "require": {
+    "php": ">= 5.6 < 7.0",
+    "guzzlehttp/guzzle": "^6.3",
+    "litipk/php-bignumbers": "^0.7.3",
+    "psr/log": "^1.0"
+  },
   "autoload": {
     "psr-4": {
       "Shrikeh\\GuzzleMiddleware\\TimerLogger\\": "src"
@@ -26,19 +41,5 @@
   },
   "archive": {
       "exclude": ["*", "!/src"]
-  },
-  "require-dev": {
-    "behat/behat": "^3.4",
-    "friendsofphp/php-cs-fixer": "^2.6",
-    "monolog/monolog": "^1.23",
-    "phpspec/phpspec": "^3.4",
-    "squizlabs/php_codesniffer": "^3.1",
-    "escapestudios/symfony2-coding-standard": "^3.0"
-  },
-  "require": {
-    "php": ">= 5.6 < 7.0",
-    "guzzlehttp/guzzle": "^6.3",
-    "litipk/php-bignumbers": "^0.7.3",
-    "psr/log": "^1.0"
   }
 }
