--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,10 @@ cache:
 before_install:
 # Remove xdebug as per https://getcomposer.org/doc/articles/troubleshooting.md#xdebug-impact-on-composer
   - if [ "$TRAVIS_PHP_VERSION" != 'hhvm' ]; then phpenv config-rm xdebug.ini; fi
-  - composer self-update
-  - composer validate
 
 install:
   - composer install --prefer-dist
+
+script:
+  - bin/test
 ...
