--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ sudo: false
 matrix:
   include:
     - php: 5.6
-    - php: hhvm
     - php: 7.0
+    - php: 7.1
+    - php: 7.2
   allow_failures:
     # HHVM will be abandoned so let's not have it break builds
     - php: hhvm
