--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ cache:
 before_install:
   - |
       if [[ "${BLACKFIRE}" = "on" ]]; then
-          openssl aes-256-cbc -K $encrypted_2f96065df0f8_key -iv $encrypted_2f96065df0f8_iv -in .blackfire.travis.ini.enc -out .blackfire.travis.ini -d
+          openssl aes-256-cbc -K $encrypted_2f96065df0f8_key -iv $encrypted_2f96065df0f8_iv -in .blackfire.travis.ini.enc -out ~/.blackfire.ini -d
           curl -L https://blackfire.io/api/v1/releases/agent/linux/amd64 | tar zxpf -
           chmod 755 agent && ./agent --config=~/.blackfire.ini --socket=unix:///tmp/blackfire.sock &
       fi
