--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
     }
   ],
   "require-dev": {
+    "blackfire/php-sdk": "^1.11",
     "escapestudios/symfony2-coding-standard": "^3.0",
     "friendsofphp/php-cs-fixer": "^2.6",
     "monolog/monolog": "^1.23",
     "phpspec/phpspec": "^3.4",
+    "phpunit/phpunit": "^5.7",
     "shrikeh/teapot": "^2.3",
     "squizlabs/php_codesniffer": "^3.1"
   },
