--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
   ],
   "require-dev": {
     "blackfire/php-sdk": "^1.11",
+    "codeception/codeception": "^2.3",
     "escapestudios/symfony2-coding-standard": "^3.0",
     "friendsofphp/php-cs-fixer": "^2.6",
+    "mcustiel/phiremock-codeception-extension": "^1.4",
     "monolog/monolog": "^1.23",
     "phpspec/phpspec": "^3.4",
     "phpunit/phpunit": "^5.7",
