Add base service provider

--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -6,6 +6,10 @@
 # Remove this suite if you don't use frameworks
 
 actor: FunctionalDeveloper
+gherkin:
+    contexts:
+        default:
+          - Tests\Shrikeh\GuzzleMiddleware\TimerLogger\FunctionalDeveloper
 modules:
     enabled:
         # add a framework module here
