--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "monolog/monolog": "^1.23",
     "phpspec/phpspec": "^3.4",
     "phpunit/phpunit": "^5.7",
+    "pimple/pimple": "^3.2",
     "shrikeh/teapot": "^2.3",
     "squizlabs/php_codesniffer": "^3.1"
   },
