--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "phpunit/phpunit": "^5.7",
     "pimple/pimple": "^3.2",
     "shrikeh/teapot": "^2.3",
-    "squizlabs/php_codesniffer": "^3.1"
+    "squizlabs/php_codesniffer": "^3.1",
+    "symfony/dotenv": "^3.3"
   },
   "require": {
     "php": ">= 5.6 < 7.0",
