--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "symfony/dotenv": "^3.3"
   },
   "require": {
-    "php": ">= 5.6 < 7.0",
+    "php": "^7.1",
     "guzzlehttp/guzzle": "^6.3",
     "litipk/php-bignumbers": "^0.7.3",
     "psr/log": "^1.0"
